# berm

./: .gitignore  CODEBASE_WALKTHROUGH.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  OVERVIEW.md  README.md  SESSION_NOTES.md  plan.json  pyproject.toml
.berm/: lambda-python-38-error.json  lambda-python-39-warning.json  multi-resource-tags-not-empty.json  multi-resource-tags-required.json  publicly-accessible-warning.json  rds-backup-retention.json  rds-engine-version.json  rds-postgres-version-error.json  rds-postgres-version-warning.json  s3-block-public-access.json  s3-bucket-requires-security.json  s3-use-module-only.json
.claude/: settings.local.json
berm/: __init__.py  __main__.py  cli.py  security.py
berm/evaluators/: __init__.py  cross_resource.py  simple.py
berm/loaders/: __init__.py  rules.py  terraform.py
berm/models/: __init__.py  rule.py  violation.py
berm/reporters/: __init__.py  github.py  json_reporter.py  terminal.py
examples/: README.md
examples/rules/: ec2-allowed-instance-types.json  rds-backup-retention.json  rds-encryption-enabled.json  s3-bucket-name-pattern.json  s3-bucket-tags-required.json  s3-encryption-enabled.json  s3-versioning-enabled.json
examples/terraform/: main.tf
tests/: conftest.py  test_security.py
tests/evaluators/: test_cross_resource.py  test_simple.py  test_simple_new_features.py
tests/fixtures/: sample-plan.json
tests/integration/: test_e2e.py
tests/loaders/: test_rules.py  test_terraform.py
tests/models/: test_rule.py  test_violation.py
